Fixing list on SQLi

--- a/_posts/2020-06-26-SQLi.html
+++ b/_posts/2020-06-26-SQLi.html
@@ -124,7 +124,58 @@ execute($stmt, array(&quot;user_input&quot;));</code></pre>
 </ul>
 <h1 id="List of SQL Engines">List of SQL Engines</h1>
 <p>There are a lot. Here's the top 50 as of 2020-06-25 <a href="https://db-engines.com/en/ranking">https://db-engines.com/en/ranking</a></p>
-<p>Oracle MySQL Microsoft SQL Server PostgreSQL MongoDB IBM Db2 Elasticsearch Redis SQLite Cassandra Microsoft Access MariaDB Splunk Hive Teradata Amazon DynamoDB SAP Adaptive Server Solr SAP HANA FileMaker HBase Neo4j Microsoft Azure SQL Database Microsoft Azure Cosmos DB Couchbase Google BigQuery Memcached Informix Amazon Redshift InfluxDB Vertica Firebird Netezza Spark SQL CouchDB Impala Firebase Realtime Database dBASE Greenplum MarkLogic Presto Oracle Essbase Microsoft Azure SQL Data Warehouse Hazelcast Amazon Aurora Realm Datastax Enterprise etcd Google Cloud Firestore H2</p>
+<ul>
+<li>Oracle</li>
+<li>MySQL</li>
+<li>Microsoft SQL Server</li>
+<li>PostgreSQL</li>
+<li>MongoDB</li>
+<li>IBM Db2</li>
+<li>Elasticsearch</li>
+<li>Redis</li>
+<li>SQLite</li>
+<li>Cassandra</li>
+<li>Microsoft Access</li>
+<li>MariaDB</li>
+<li>Splunk</li>
+<li>Hive</li>
+<li>Teradata</li>
+<li>Amazon DynamoDB</li>
+<li>SAP Adaptive Server</li>
+<li>Solr</li>
+<li>SAP HANA</li>
+<li>FileMaker</li>
+<li>HBase</li>
+<li>Neo4j</li>
+<li>Microsoft Azure SQL Database</li>
+<li>Microsoft Azure Cosmos DB</li>
+<li>Couchbase</li>
+<li>Google BigQuery</li>
+<li>Memcached</li>
+<li>Informix</li>
+<li>Amazon Redshift</li>
+<li>InfluxDB</li>
+<li>Vertica</li>
+<li>Firebird</li>
+<li>Netezza</li>
+<li>Spark SQL</li>
+<li>CouchDB</li>
+<li>Impala</li>
+<li>Firebase Realtime Database</li>
+<li>dBASE</li>
+<li>Greenplum</li>
+<li>MarkLogic</li>
+<li>Presto</li>
+<li>Oracle Essbase</li>
+<li>Microsoft Azure SQL Data Warehouse</li>
+<li>Hazelcast</li>
+<li>Amazon Aurora</li>
+<li>Realm</li>
+<li>Datastax Enterprise</li>
+<li>etcd</li>
+<li>Google Cloud Firestore</li>
+<li>H2</li>
+</ul>
 <h1 id="Further Research">Further Research</h1>
 <ul>
 <li>Find a lot of SQLi CTF problems</li>
